--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,15 @@
     <a href="performance.html">Performance</a>
     <a href="contact.html">Contact</a>
   </nav>
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0WT5WFF0K4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-0WT5WFF0K4');
+</script>
+
 </header>
 <main>
 <h1>Contact Us</h1>
