--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head><title>About</title><link rel="stylesheet" href="css/style.css"></head>
+<head><title>About</title>
+<link rel="stylesheet" href="css/style.css">
+</head>
 <body>
 <header>
   <nav>
