Initial commit - ExploreEase website

--- a/blog.html
+++ b/blog.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html>
-<head><title>Blog</title><link rel="stylesheet" href="css/style.css"></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog | ExploreEase</title>
+
+  <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
-<header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="destinations.html">Destinations</a>
-    <a href="packages.html">Packages</a>
-    <a href="blog.html">Blog</a>
-    <a href="performance.html">Performance</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+
+<header class="navbar">
+  <h2 class="logo">ExploreEase</h2>
 </header>
-<main>
-<h1>Travel Blog</h1>
-<a href="blog-1.html">Blog 1</a><br>
-<a href="blog-2.html">Blog 2</a><br>
-<a href="blog-3.html">Blog 3</a>
-</main>
-<footer>© ExploreEase</footer>
+
+<section class="section" style="margin-top:80px">
+  <h2>Travel Blog</h2>
+  <p>Travel tips, destination guides, and experiences.</p>
+</section>
+
+<footer>
+  <p>© 2026 ExploreEase</p>
+</footer>
+
+<script src="js/script.js"></script>
 </body>
 </html>
