--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
-<html>
-<head><title>Contact</title><link rel="stylesheet" href="css/style.css"></head>
-<body>
-<header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="destinations.html">Destinations</a>
-    <a href="packages.html">Packages</a>
-    <a href="blog.html">Blog</a>
-    <a href="performance.html">Performance</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-  <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0WT5WFF0K4"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-0WT5WFF0K4');
-</script>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact | ExploreEase</title>
 
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<header class="navbar">
+  <h2 class="logo">ExploreEase</h2>
 </header>
-<main>
-<h1>Contact Us</h1>
-<p>Email: explore@ease.com</p>
-</main>
-<footer>© ExploreEase</footer>
+
+<section class="section" style="margin-top:80px">
+  <h2>Contact Us</h2>
+  <p>Email: ssidharth879@gmail.com</p>
+  <p>Phone: +91 98765 43210</p>
+</section>
+
+<footer>
+  <p>© 2026 ExploreEase</p>
+</footer>
+
+<script src="js/script.js"></script>
 </body>
 </html>
