--- a/packages.html
+++ b/packages.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
-<html>
-<head><title>Packages</title><link rel="stylesheet" href="css/style.css"></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Packages | ExploreEase</title>
+
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+</head>
 <body>
-<header>
+
+<header class="navbar">
+  <h2 class="logo">ExploreEase</h2>
   <nav>
     <a href="index.html">Home</a>
     <a href="destinations.html">Destinations</a>
@@ -12,11 +21,29 @@
     <a href="contact.html">Contact</a>
   </nav>
 </header>
-<main>
-<h1>Tour Packages</h1>
-<a href="package-budget.html">Budget Package</a><br>
-<a href="package-luxury.html">Luxury Package</a>
-</main>
-<footer>© ExploreEase</footer>
+
+<section class="section" style="margin-top:80px">
+  <h2>Tour Packages</h2>
+
+  <div class="cards">
+    <div class="card">
+      <div class="card-info">
+        <a href="package-budget.html" style="color:white;text-decoration:none">Budget Package</a>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-info">
+        <a href="package-luxury.html" style="color:white;text-decoration:none">Luxury Package</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<footer>
+  <p>© 2026 ExploreEase</p>
+</footer>
+
+<script src="js/script.js"></script>
 </body>
 </html>
