--- a/performance.html
+++ b/performance.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
-<html>
-<head><title>Performance</title><link rel="stylesheet" href="css/style.css"></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Performance | ExploreEase</title>
+
+  <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
-<header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="destinations.html">Destinations</a>
-    <a href="packages.html">Packages</a>
-    <a href="blog.html">Blog</a>
-    <a href="performance.html">Performance</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+
+<header class="navbar">
+  <h2 class="logo">ExploreEase</h2>
 </header>
-<main>
-<h1>Web Performance Metrics</h1>
-<ul>
-<li>FCP</li>
-<li>LCP</li>
-<li>CLS</li>
-<li>TBT</li>
-<li>SI</li>
-<li>TTI</li>
-</ul>
-</main>
-<footer>© ExploreEase</footer>
+
+<section class="section" style="margin-top:80px">
+  <h2>Our Performance</h2>
+  <p>Customer satisfaction, trips completed, and reviews.</p>
+</section>
+
+<footer>
+  <p>© 2026 ExploreEase</p>
+</footer>
+
+<script src="js/script.js"></script>
 </body>
 </html>
