--- a/destination-jaipur.html
+++ b/destination-jaipur.html
@@ -1,21 +1,60 @@
 <!DOCTYPE html>
-<html>
-<head><title>Jaipur</title><link rel="stylesheet" href="css/style.css"></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jaipur | ExploreEase</title>
+
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+</head>
 <body>
-<header>
+
+<header class="navbar">
+  <h2 class="logo">ExploreEase</h2>
+
+  <input type="checkbox" id="menu-toggle">
+  <label for="menu-toggle" class="menu-icon">☰</label>
+
   <nav>
     <a href="index.html">Home</a>
     <a href="destinations.html">Destinations</a>
     <a href="packages.html">Packages</a>
     <a href="blog.html">Blog</a>
-    <a href="performance.html">Performance</a>
     <a href="contact.html">Contact</a>
+    <button id="darkBtn">🌙</button>
   </nav>
 </header>
-<main>
-<h1>Jaipur</h1>
-<p>The Pink City of India.</p>
-</main>
-<footer>© ExploreEase</footer>
+
+<section class="hero" style="background-image:url('images/jaipur.webp'); height:60vh">
+  <div class="hero-text">
+    <h1>Jaipur</h1>
+    <p>The Pink City of India</p>
+  </div>
+</section>
+
+<section class="section">
+  <h2>About Jaipur</h2>
+  <p style="max-width:800px;margin:auto">
+    Jaipur is the capital of Rajasthan, known for its royal palaces,
+    historic forts, vibrant culture, and colorful markets.
+  </p>
+</section>
+
+<section class="section alt">
+  <h2>Things to Do</h2>
+  <ul style="list-style:none;max-width:600px;margin:auto">
+    <li>🏰 Visit forts & palaces</li>
+    <li>🛍 Local shopping</li>
+    <li>📸 Heritage photography</li>
+    <li>🍛 Rajasthani cuisine</li>
+  </ul>
+</section>
+
+<footer>
+  <p>© 2026 ExploreEase</p>
+</footer>
+
+<script src="js/script.js"></script>
 </body>
 </html>
