--- a/destinations.html
+++ b/destinations.html
@@ -1,35 +1,74 @@
 <!DOCTYPE html>
-<html>
-<head><title>Destinations</title><link rel="stylesheet" href="css/style.css"></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Destinations | ExploreEase</title>
+
+  <!-- CORRECT CSS PATH -->
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+</head>
 <body>
-<header>
+
+<!-- NAVBAR (same as home) -->
+<header class="navbar">
+  <h2 class="logo">ExploreEase</h2>
+
+  <input type="checkbox" id="menu-toggle">
+  <label for="menu-toggle" class="menu-icon">☰</label>
+
   <nav>
     <a href="index.html">Home</a>
     <a href="destinations.html">Destinations</a>
     <a href="packages.html">Packages</a>
     <a href="blog.html">Blog</a>
-    <a href="performance.html">Performance</a>
     <a href="contact.html">Contact</a>
+    <button id="darkBtn">🌙</button>
   </nav>
-  <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0WT5WFF0K4"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-0WT5WFF0K4');
-</script>
-
 </header>
 
-<main>
-<h1>Popular Destinations</h1>
-<ul>
-<li><a href="destination-goa.html">Goa</a></li>
-<li><a href="destination-manali.html">Manali</a></li>
-<li><a href="destination-jaipur.html">Jaipur</a></li>
-</ul>
-</main>
-<footer>© ExploreEase</footer>
+<!-- PAGE HEADER -->
+<section class="section" style="margin-top:80px">
+  <h2>Popular Destinations</h2>
+</section>
+
+<!-- DESTINATION CARDS -->
+<section class="section">
+  <div class="cards">
+
+    <div class="card">
+      <img src="images/goa.jpg">
+      <div class="card-info">
+        <a href="destination-goa.html" style="color:white;text-decoration:none">Goa</a>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="images/manali.jpg">
+      <div class="card-info">
+        <a href="destination-manali.html" style="color:white;text-decoration:none">Manali</a>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="images/jaipur.webp">
+      <div class="card-info">
+        <a href="destination-jaipur.html" style="color:white;text-decoration:none">Jaipur</a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+  <p>© 2026 ExploreEase</p>
+</footer>
+
+<!-- CORRECT JS PATH -->
+<script src="js/script.js"></script>
 </body>
 </html>
