--- a/index.html
+++ b/index.html
@@ -1,39 +1,110 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>ExploreEase | Home</title>
-<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ExploreEase</title>
+
+  <!-- CSS (IMPORTANT PATH) -->
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<header>
+<!-- NAVBAR -->
+<header class="navbar">
+  <h2 class="logo">ExploreEase</h2>
+
+  <input type="checkbox" id="menu-toggle">
+  <label for="menu-toggle" class="menu-icon">☰</label>
+
   <nav>
     <a href="index.html">Home</a>
     <a href="destinations.html">Destinations</a>
-    <a href="packages.html">Packages</a>
-    <a href="blog.html">Blog</a>
-    <a href="performance.html">Performance</a>
+    <a href="gallery.html">Gallery</a>
     <a href="contact.html">Contact</a>
+    <button id="darkBtn">🌙</button>
   </nav>
-  <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0WT5WFF0K4"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-0WT5WFF0K4');
-</script>
-
 </header>
 
+<!-- HERO -->
+<section class="hero">
+  <div class="hero-text">
+    <h1>Discover the World<br>With Confidence</h1>
+    <p>Premium curated travel experiences</p>
+    <a href="destinations.html" class="btn">Explore Now</a>
+  </div>
+</section>
 
-<main>
-<h1>Welcome to ExploreEase</h1>
-<p>Your one-stop travel & adventure planning platform.</p>
-<img src="images/home.webp" loading="lazy">
-</main>
+<!-- DESTINATIONS -->
+<section class="section">
+  <h2>Top Destinations</h2>
 
-<footer>© 2026 ExploreEase</footer>
-<script src="js/main.js" defer></script>
+  <div class="cards">
+    <div class="card">
+      <img src="images/goa.jpg">
+      <div class="card-info">Goa</div>
+    </div>
+
+    <div class="card">
+      <img src="images/manali.jpg">
+      <div class="card-info">Manali</div>
+    </div>
+
+    <div class="card">
+      <img src="images/paris.jpg">
+      <div class="card-info">Paris</div>
+    </div>
+
+    <div class="card">
+      <img src="images/bali.jpg">
+      <div class="card-info">Bali</div>
+    </div>
+  </div>
+</section>
+
+<!-- GALLERY -->
+<section class="section alt">
+  <h2>Travel Gallery</h2>
+
+  <div class="gallery">
+    <img src="images/gallery1.jpg" onclick="openImg(this.src)">
+    <img src="images/gallery2.jpg" onclick="openImg(this.src)">
+    <img src="images/gallery3.jpg" onclick="openImg(this.src)">
+  </div>
+</section>
+
+<!-- LIGHTBOX -->
+<div id="lightbox" onclick="this.style.display='none'">
+  <img id="lightbox-img">
+</div>
+
+<!-- REVIEWS -->
+<section class="section">
+  <h2>Traveler Reviews</h2>
+
+  <div class="reviews">
+    <div class="review">
+      <img src="images/user1.jpg">
+      <p>“Best experience ever!”</p>
+      ⭐⭐⭐⭐⭐
+    </div>
+
+    <div class="review">
+      <img src="images/user2.jpg">
+      <p>“Very professional service.”</p>
+      ⭐⭐⭐⭐⭐
+    </div>
+  </div>
+</section>
+
+<footer>
+  <p>© 2026 ExploreEase</p>
+</footer>
+
+<!-- JS (IMPORTANT PATH) -->
+<script src="js/script.js"></script>
 </body>
 </html>
