--- a/package-luxury.html
+++ b/package-luxury.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
-<html>
-<head><title>Luxury Package</title><link rel="stylesheet" href="css/style.css"></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Luxury Package | ExploreEase</title>
+
+  <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
-<header>
+
+<header class="navbar">
+  <h2 class="logo">ExploreEase</h2>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="destinations.html">Destinations</a>
-    <a href="packages.html">Packages</a>
-    <a href="blog.html">Blog</a>
-    <a href="performance.html">Performance</a>
-    <a href="contact.html">Contact</a>
+    <a href="packages.html">Back to Packages</a>
   </nav>
 </header>
-<main>
-<h1>Luxury Travel Package</h1>
-<p>Premium travel experience.</p>
-</main>
-<footer>© ExploreEase</footer>
+
+<section class="section" style="margin-top:80px">
+  <h2>Luxury Travel Package</h2>
+  <p style="max-width:700px;margin:auto">
+    Premium hotels, private transfers, exclusive experiences,
+    and 24/7 concierge service.
+  </p>
+</section>
+
+<footer>
+  <p>© 2026 ExploreEase</p>
+</footer>
+
+<script src="js/script.js"></script>
 </body>
 </html>
