Major website redesign: Modern professional UI with high-quality images and enhanced features

--- a/destinations.html
+++ b/destinations.html
@@ -89,7 +89,7 @@
 
       <div class="destination-card" data-category="beach">
         <div class="destination-image">
-          <img src="images/goa.webp" alt="Goa Beach Paradise" loading="lazy">
+          <img src="https://images.unsplash.com/photo-1512343879784-a960bf40e7f2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80" alt="Goa Beach Paradise" loading="lazy">
           <div class="destination-badge">
             <i class="fas fa-star"></i> 4.8
           </div>
@@ -121,7 +121,7 @@
 
       <div class="destination-card" data-category="mountain adventure">
         <div class="destination-image">
-          <img src="images/manali.webp" alt="Manali Mountain Adventure" loading="lazy">
+          <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Manali Mountain Adventure" loading="lazy">
           <div class="destination-badge">
             <i class="fas fa-star"></i> 4.9
           </div>
@@ -153,7 +153,7 @@
 
       <div class="destination-card" data-category="city">
         <div class="destination-image">
-          <img src="images/jaipur.webp" alt="Jaipur Pink City" loading="lazy">
+          <img src="https://images.unsplash.com/photo-1599946347371-68eb71b16afc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Jaipur Pink City" loading="lazy">
           <div class="destination-badge">
             <i class="fas fa-star"></i> 4.7
           </div>
@@ -185,7 +185,7 @@
 
       <div class="destination-card" data-category="city">
         <div class="destination-image">
-          <img src="images/paris.jpg" alt="Paris City of Love" loading="lazy">
+          <img src="https://images.unsplash.com/photo-1502602898536-47ad22581b52?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2073&q=80" alt="Paris City of Love" loading="lazy">
           <div class="destination-badge">
             <i class="fas fa-star"></i> 4.8
           </div>
@@ -217,7 +217,7 @@
 
       <div class="destination-card" data-category="beach">
         <div class="destination-image">
-          <img src="images/bali.jpg" alt="Bali Tropical Paradise" loading="lazy">
+          <img src="https://images.unsplash.com/photo-1537953773345-d172ccf13cf1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Bali Tropical Paradise" loading="lazy">
           <div class="destination-badge">
             <i class="fas fa-star"></i> 4.9
           </div>
