--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     <div class="cards">
       <div class="card" onclick="window.location.href='destination-goa.html'">
-        <img src="images/goa.webp" alt="Goa Beach Paradise" loading="lazy">
+        <img src="https://images.unsplash.com/photo-1512343879784-a960bf40e7f2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80" alt="Goa Beach Paradise" loading="lazy">
         <div class="card-overlay">
           <div class="card-info">
             <h3>Goa</h3>
@@ -137,7 +137,7 @@
       </div>
 
       <div class="card" onclick="window.location.href='destination-manali.html'">
-        <img src="images/manali.webp" alt="Manali Mountain Adventure" loading="lazy">
+        <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Manali Mountain Adventure" loading="lazy">
         <div class="card-overlay">
           <div class="card-info">
             <h3>Manali</h3>
@@ -155,7 +155,7 @@
       </div>
 
       <div class="card">
-        <img src="images/paris.jpg" alt="Paris City of Love" loading="lazy">
+        <img src="https://images.unsplash.com/photo-1502602898536-47ad22581b52?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2073&q=80" alt="Paris City of Love" loading="lazy">
         <div class="card-overlay">
           <div class="card-info">
             <h3>Paris</h3>
@@ -173,7 +173,7 @@
       </div>
 
       <div class="card">
-        <img src="images/bali.jpg" alt="Bali Tropical Paradise" loading="lazy">
+        <img src="https://images.unsplash.com/photo-1537953773345-d172ccf13cf1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Bali Tropical Paradise" loading="lazy">
         <div class="card-overlay">
           <div class="card-info">
             <h3>Bali</h3>
@@ -230,9 +230,9 @@
     <p class="section-subtitle">Moments captured from our travelers' incredible journeys around the world</p>
 
     <div class="gallery">
-      <img src="images/gallery1.webp" alt="Travel Memory 1" onclick="openImg(this.src)" loading="lazy">
-      <img src="images/gallery2.webp" alt="Travel Memory 2" onclick="openImg(this.src)" loading="lazy">
-      <img src="images/gallery3.jpg" alt="Travel Memory 3" onclick="openImg(this.src)" loading="lazy">
+      <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2074&q=80" alt="Travel Memory 1" onclick="openImg(this.src)" loading="lazy">
+      <img src="https://images.unsplash.com/photo-1476514525535-07fb3b4ae5f1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" alt="Travel Memory 2" onclick="openImg(this.src)" loading="lazy">
+      <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2073&q=80" alt="Travel Memory 3" onclick="openImg(this.src)" loading="lazy">
     </div>
     
     <div class="text-center" style="margin-top: 2rem;">
@@ -258,7 +258,7 @@
     <div class="reviews">
       <div class="review">
         <div class="review-header">
-          <img src="images/user1.jpg" alt="Sarah Johnson">
+          <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="Sarah Johnson">
           <div class="reviewer-info">
             <h4>Sarah Johnson</h4>
             <p>Travel Enthusiast</p>
@@ -276,7 +276,7 @@
 
       <div class="review">
         <div class="review-header">
-          <img src="images/user2.avif" alt="Michael Chen">
+          <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="Michael Chen">
           <div class="reviewer-info">
             <h4>Michael Chen</h4>
             <p>Adventure Seeker</p>
